# EasyOCR

./: .coveragerc  .gitignore  custom_model.md  easy_ocr_dev.ipynb  pyproject.toml  releasenotes.md  requirement.yml  requirement_perso.txt  requirements.txt  setup.cfg  setup.py  tox.ini
easyocr/: __init__.py  cli.py  config.py  craft.py  craft_utils.py  detection.py  easyocr.py  export.py  imgproc.py  recognition.py  utils.py
easyocr/model/: model.py  modules.py  vgg_model.py
easyocr/tests/: test_utils.py
tests/: conftest.py  test_detection.py  test_utils.py
tests/data/test_detection/: test_readtext_simple.yml
tests/data/test_easyocr_utils/: test_CTCLabelConverter_decode_beamsearch.yaml  test_CTCLabelConverter_decode_greedy.yaml  test_ctcBeamSearch.yaml  test_group_text_box.yaml  test_word_segmentation.yaml
tests/data/test_easyocr_utils/data/: mat_proba_Mairie.csv  skew_text_1_transf_arr.csv
tests/golden_utils/: test_ctcBeamSearch.yaml
trainer/: dataset.py  model.py  test.py  train.py  utils.py
trainer/craft/: eval.py  train.py  trainSynth.py  train_distributed.py
trainer/craft/config/: load_config.py
trainer/craft/data/: boxEnlarge.py  dataset.py  gaussian.py  imgaug.py  imgproc.py
trainer/craft/data/pseudo_label/: make_charbox.py  watershed.py
trainer/craft/loss/: mseloss.py
trainer/craft/metrics/: eval_det_iou.py
trainer/craft/model/: craft.py
trainer/craft/utils/: craft_utils.py  inference_boxes.py  util.py
trainer/modules/: feature_extraction.py  prediction.py  sequence_modeling.py  transformation.py
