[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
addopts = "-v -s"
enable_assertion_pass_hook=true
# This are depreciation warnings raised by PILLOW.
# TODO: Adapt the code in order to solve them:
filterwarnings = ["ignore:.*ANTIALIAS:DeprecationWarning",
                  "ignore:.*BICUBIC:DeprecationWarning"]

[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
